--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <li class ='dropdown-submenu program-menu menu-item-Student work'><a href='/academics/programs/interior-design/student-work' class='program-menu-link '>Student work</a></li>
 <li class ='dropdown-submenu program-menu menu-item-Faculty'><a href='/academics/programs/interior-design/faculty' class='program-menu-link '>Faculty</a></li>
 <li class ='dropdown-submenu program-menu menu-item-Student experience'><a href='/academics/programs/interior-design/student-experience' class='program-menu-link '>Student experience</a></li>
-<li class ='dropdown-submenu program-menu menu-item-AI-Advantage'><a href='joshuawfINDS.github.io/INDS2' class='program-menu-link '>SCAD AI Advantage</a></li>
+<li class ='dropdown-submenu program-menu menu-item-AI-Advantage'><a href='https://joshuawf.github.io/joshuawfINDS.github.io/INDS2' class='program-menu-link '>SCAD AI Advantage</a></li>
 <li class='sidebar-programs hidden-xs'><a href='/academics/programs'><i class='icon-karat_left'></i>All programs </a></li></ul></li><ul class='menu nav navbar-nav'>
 <li class ='dropdown first-contextual open menu-item-programs'> <a class=' overview-page' href='/academics/programs'><span>Programs</span></a><ul class='nav navbar-nav dropdown-menu'>
 <li class='dropdown-submenu menu-item-school-animation-and-motion'><div class='left_sidebar__link-container'><a href='/academics/programs/school-animation-and-motion' id='left_sidebar__a11y-label--School-of-Animation-and-Motion' data-target='#' class='dropdown-toggle ' data-toggle='dropdown'>School of Animation and Motion</a><button class='left_sidebar__dropdown-btn' aria-label='Toggle submenu'><i class='dropdown-arrow'></i></button></div><ul class='nav navbar-nav dropdown-menu'>
@@ -1168,3 +1168,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </body>
 
 </html>
+
