--- a/INDS2.html
+++ b/INDS2.html
@@ -301,8 +301,23 @@
             </div>
         </div>
     </section>
-
-        <!-- Applied AI Minor Section -->
+<!-- Student Spotlight Callout -->
+            <div style="background: linear-gradient(135deg, #2e3b8e 0%, #1f2a5f 100%); color: white; padding: 50px; margin-bottom: 60px; border-radius: 0;">
+                <div class="two-column" style="gap: 50px; margin-top: 0;">
+                    <div class="column">
+                        <h3 style="color: white; font-size: 1.1em; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Student Spotlight</h3>
+                        <h2 style="color: white; margin-bottom: 25px;">Future archaeology: Where AI meets artistic vision</h2>
+                        <p style="color: rgba(255,255,255,0.95); line-height: 1.8;">Photography student Chenxue Snow Xia (M.A. photography) uses AI not to replace her creative vision, but to expand it. Her award-winning project <em>Future Archaeology</em> imagines how AI might observe and categorize human behavior in a hypothetical future—transforming everyday movements into patterns and data.</p>
+                        <p style="color: rgba(255,255,255,0.95); line-height: 1.8;">"AI sees patterns, not emotions," Xia observes. Her work reveals both the power and limitations of intelligent systems, showing how technology can enhance creativity while human insight remains irreplaceable.</p>
+                        <p style="color: rgba(255,255,255,0.95); line-height: 1.8; margin-bottom: 0;"><strong>Her advice to designers:</strong> "Don't wait until you master a tool—just start playing. Curiosity matters more than perfection. Technology is just a language. What you say with it is still up to you."</p>
+                    </div>
+                    <div class="column">
+                        <img src="https://media.licdn.com/dms/image/v2/D4E12AQHGlUQ2DqgFZg/article-inline_image-shrink_1500_2232/article-inline_image-shrink_1500_2232/0/1726489766992?e=1739404800&v=beta&t=tYUxHJfYp_6yKqJVPbPzqPwQ8vG8lE3hLABMB5C2aBk" alt="Future Archaeology by Chenxue Snow Xia" style="width: 100%; height: auto; display: block; border: 3px solid rgba(255,255,255,0.3);">
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!-- Applied AI Minor Section -->
     <section style="background-color: #fafafa;">
         <div class="container">
             <div class="two-column reverse">
@@ -379,4 +394,5 @@
 </body>
 
 </html>
+
 
