Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -542,10 +542,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!--<p><p><strong>Interior design mission:</strong><br />
 	The SCAD interior design department exists to guide students to become innovative interior designers capable of critical thinking, effective communication, and collaborative teamwork, emphasizing professional ethics and values within the context of social, environmental, and global design practice.</p>
 <p>--></p>
-	  <p><h3>SCAD AI Advantage</h3></p>
-<img src="Sketch.png" alt="Sketch">
-<img src="AI Render.png" alt="AI Render">
-<p>Learn how Interior Design student Tara Oviedo combined her creativity and sketching skills with cutting-edge AI systems to quickly ideate her design.</p>
+	  <p><h3>SCAD AI Advantage</h3></p><p>Learn how Interior Design student Tara Oviedo combined her creativity and sketching skills with cutting-edge AI systems to quickly ideate her design.</p>
+<p><img src="Sketch.png" alt="Sketch"></p>
+<p><img src="AI Render.png" alt="AI Render"><p>
+
   </div>
 
   
@@ -1172,6 +1172,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </body>
 
 </html>
+
 
 
 
